--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Stretch The Rope</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <script src="js/jquery.js" type="text/javascript"></script>
         <script src="js/jQueryRotate.js" type="text/javascript"></script>
         <script src="js/websocket.js" type="text/javascript"></script>
